more work on base template

--- a/_posts/tumblr/2015-06-16-introducing-gumshoe.html
+++ b/_posts/tumblr/2015-06-16-introducing-gumshoe.html
@@ -11,11 +11,12 @@ tags:
 - events
 - event tracking
 - andrew powell
-tumblr_url: http://tech.gilt.com/post/121673461239/introducing-gumshoe
 ---
 <p>An analytics and event tracking sleuth.</p>
 
 <p>In late 2014 Gilt received word that a core feature of Google Analytics (henceforth known as GA) would be removed in the next iteration of the platform. The ability to redirect collected data and events to a secondary endpoint had grown critical to our the analization of user behavior, patterns, and effectiveness of our user experience, as well as sales forecasting and predictive modeling. Our two most viable options for retaining this ability were to implement another tracking platform from a different vendor or create and implement our own, tailored to our specific needs.</p>
+
+<!--more-->
 
 <h1><a href="https://github.com/gilt/Gumshoe" target="_blank"><strong><a href="https://github.com/gilt/Gumshoe" target="_blank">https://github.com/gilt/Gumshoe</a></strong></a></h1>
 
