get author bio from site.authors collection

--- a/_authors/dana_pylayeva.html
+++ b/_authors/dana_pylayeva.html
@@ -1,7 +1,7 @@
 ---
 name: Dana Pylayeva
-job-title: ~
-mini-bio: ~
+job-title: Senior Developer
+mini-bio: I like turtles. Outside of my day job I enjoy contributing to open source home automation and eating vegan.
 
 # list one or multiple
 social-media-profiles:
