added code page

--- a/code/index.html
+++ b/code/index.html
@@ -1,5 +1,16 @@
 ---
 layout: default
 ---
-
-<h1>code</h1>
+<section class="page code-page">
+	<header class="page__header">
+		<h1 class="page__title">Code</h1>
+		<p class="page__description">Some of the open source projects we've created</p>
+	</header>
+	<div id="loading">Loading...</div>
+	<div id="fallback" class="hidden">
+	  <a class="btn" href="https://github.com/gilt">View Gilt's Repositories</a>
+	</div>
+	<section id="all-repos" class="repos-container">
+		
+	</section>
+</section>
