--- a/_authors/dana-pylayeva.html
+++ b/_authors/dana-pylayeva.html
@@ -1,7 +1,7 @@
 ---
 name: Dana Pylayeva
-job-title: Senior Developer
-mini-bio: I like turtles. Outside of my day job I enjoy contributing to open source home automation and eating vegan.
+job-title: ~
+mini-bio: ~
 
 # list one or multiple
 social-media-profiles:
