--- a/about/index.html
+++ b/about/index.html
@@ -1,4 +1,13 @@
 ---
 layout: default
 ---
-<h1>about</h1>
+<section class="page about-page">
+	<header class="page__header">
+		<h1 class="page__title">About</h1>
+		<p class="page__description">Something really cool is going here...</p>
+	</header>
+
+	<section>
+		<img class="dummy-content" src="https://images.unsplash.com/photo-1508138221679-760a23a2285b?dpr=1&auto=format&fit=crop&w=1567&q=60&cs=tinysrgb" />
+	</section>
+</section>
