--- a/index.html
+++ b/index.html
@@ -71,79 +71,77 @@ layout:
         {% include header.html %}
         <section class="content">
             <!-- page 1 template -->
-            <!-- display the 1st article in a big way-->
-            <section class="article-listing">
             {% for post in paginator.posts limit:1 %}
-                <div class="article-listing__featured">        
-                        {% if post.image.feature %}
+            <!-- display the 1st article in a big way-->
+            <section class="article-listing article-listing__featured">        
+            {% if post.image.feature %}
                 <a class="feature-image__link"href="{{ site.url }}{{ site.baseurl }}{{ post.url }}" >
                     <img class="feature-image" src="{% if post.image.feature contains 'https' or post.image.feature contains 'http' %}{{ post.image.feature }}
-                                {% else %}{{ site.url }}{{ site.baseurl }}/assets/images/{{ post.image.feature }}
-                                {% endif %}"/>
+                            {% else %}{{ site.url }}{{ site.baseurl }}/assets/images/{{ post.image.feature }}
+                            {% endif %}"/>
+                </a>
+            {% endif %}
+                <h1 class="snippet__title"><a href="{{ site.url }}{{ site.baseurl }}{{ post.url }}" class="snippet__link" title="{{ post.title }}">{{ post.title }}</a></h1>
+                <div class="snippet__meta">
+                    <span class="meta__day">{{ post.date | date: "%-d" }}</span>
+                    <span class="meta__month">{{ post.date | date: "%b" | upcase }}</span>
+                    <span class="meta__year">{{ post.date | date: "%Y" }}</span>
+
+                    {% if post.categories.size > 0 %}
+                        {% for cat in site.category %}
+                            {% if cat.name == post.categories.first %}
+                                {% assign featureCategory = cat.name %}
+                            {% endif %}
+                        {% endfor %}
+
+                        {% if post.categories.first == featureCategory %}
+                            <a class="meta__category-link" href="{{ site.url }}{{ site.baseurl }}/category/{{ post.categories.first }}">{{post.categories.first}}</a>
+                        {% else %}
+                            <a class="meta__category-link" href="{{ site.url }}{{ site.baseurl }}/categories/#{{ post.categories.first }}">{{post.categories.first}}</a>
                         {% endif %}
-                        <h1 class="snippet__title"><a href="{{ site.url }}{{ site.baseurl }}{{ post.url }}" class="snippet__link" title="{{ post.title }}">{{ post.title }}</a></h1>
-                        <div class="snippet__meta">
-                            <span class="meta__day">{{ post.date | date: "%-d" }}</span>
-                            <span class="meta__month">{{ post.date | date: "%b" | upcase }}</span>
-                            <span class="meta__year">{{ post.date | date: "%Y" }}</span>
+                    {% endif %}
 
-                            {% if post.categories.size > 0 %}
-                                {% for cat in site.category %}
-                                    {% if cat.name == post.categories.first %}
-                                        {% assign featureCategory = cat.name %}
-                                    {% endif %}
-                                {% endfor %}
-
-                                {% if post.categories.first == featureCategory %}
-                                    <a class="meta__category-link" href="{{ site.url }}{{ site.baseurl }}/category/{{ post.categories.first }}">{{post.categories.first}}</a>
-                                {% else %}
-                                    <a class="meta__category-link" href="{{ site.url }}{{ site.baseurl }}/categories/#{{ post.categories.first }}">{{post.categories.first}}</a>
+                    {% if post.author != '' %}
+                        <span class="slug-divider"></span>
+                        {% for authorName in post.author %}
+                            {% assign authorLink = authorName | replace: ' ', '-' | downcase %}
+                            <!-- if author exists in site.authors, create link to author's page -->
+                            {% for a in site.authors %}
+                                {% if a.name == authorName %}
+                                <a class="meta__author-link" href="{{ site.url }}{{ site.baseurl }}/authors/{{ authorLink }}">
                                 {% endif %}
-                            {% endif %}
-
-                            {% if post.author != '' %}
-                                <span class="slug-divider"></span>
-                                {% for authorName in post.author %}
-                                    {% assign authorLink = authorName | replace: ' ', '-' | downcase %}
-                                    <!-- if author exists in site.authors, create link to author's page -->
-                                    {% for a in site.authors %}
-                                        {% if a.name == authorName %}
-                                        <a class="meta__author-link" href="{{ site.url }}{{ site.baseurl }}/authors/{{ authorLink }}">
-                                        {% endif %}
-                                    {% endfor %}
-                                    <!-- render the author name regardless if they're a featured author -->
-                                    {{- authorName -}}
-                                    <!-- if author exists in site.authors, close link to author's page -->
-                                    <!-- add author's job title to give article more clout -->
-                                    {% for a in site.authors %}
-                                        {% if a.name == authorName %}
-                                        </a>{%if a.job-title %}<span class="meta__author-job-title">, {{a.job-title}}</span>{% endif %}
-                                        {% endif %}
-                                    {% endfor %}
-                                    {%- unless forloop.last -%}
-                                    <span>,</span>
-                                    {% endunless %}
-                                {% endfor %}
-                            {% else %}
-                                {{ site.title }}
-                            {% endif %}
-                        </div></a>
-                    </section>
+                            {% endfor %}
+                            <!-- render the author name regardless if they're a featured author -->
+                            {{- authorName -}}
+                            <!-- if author exists in site.authors, close link to author's page -->
+                            <!-- add author's job title to give article more clout -->
+                            {% for a in site.authors %}
+                                {% if a.name == authorName %}
+                                </a>{%if a.job-title %}<span class="meta__author-job-title">, {{a.job-title}}</span>{% endif %}
+                                {% endif %}
+                            {% endfor %}
+                            {%- unless forloop.last -%}
+                            <span>,</span>
+                            {% endunless %}
+                        {% endfor %}
+                    {% else %}
+                        {{ site.title }}
+                    {% endif %}
+            </section>
             {% endfor %}
                 <!-- display the 2nd and 3rd posts in a smaller way-->
-                <div class="article-listing__sub-featured">
+            <section class="article-listing article-listing__sub-featured">
                 {% for post in paginator.posts limit:2 offset:1 %}
                     {% include article-snippet.html excerpt=true featureImage=false %}
                 {% endfor %}
-                </div>
+            </section>
                 <!-- this is the rest of the posts listed with no feature images-->
-                <div class="article-listing__remaining">
+            <section class="article-listing article-listing__remaining">
                 {% include featured-topics.html showMoreLink=true %}
                 {% for post in paginator.posts offset:3 limit:8 %}
                       {% include article-snippet.html excerpt=true featureImage=false %}
                 {% endfor %}
                 {% include pagination.html %}
-                </div>
             </section>
         </section>
         {% include footer.html %}
