fix feature post title styles

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ layout:
                         {% else %}{{ site.url }}{{ site.baseurl }}/assets/images/{{ post.image.feature }}
                         {% endif %}"/></a>
                 {% endif %}
-                <h1 class="snippet__title"><a href="{{ site.url }}{{ site.baseurl }}{{ post.url }}" class="snippet__link" title="{{ post.title }}">{{ post.title }}</a></h1>
+                <h1 class="snippet__title"><a href="{{ site.url }}{{ site.baseurl }}{{ post.url }}" class="snippet__title__link" title="{{ post.title }}">{{ post.title }}</a></h1>
                 <div class="snippet__meta">
                     <span class="meta__day">{{ post.date | date: "%-d" }}</span>
                     <span class="meta__month">{{ post.date | date: "%b" | upcase }}</span>
