updated layout with full width hero image, added subnav link items

--- a/code/index.html
+++ b/code/index.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: sub-page
 ---
 <section class="page code-page">
 	<header class="page__header">
@@ -14,4 +14,3 @@ layout: default
 		
 	</section>
 </section>
-<script type="text/javascript" src="{{ site.url }}{{ site.baseurl }}/assets/js/get-gh-repos.js"></script>
