--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ layout:
     </head>
 
     <body aria-label="Content">
-        {% include header.html %}
+        {% include header-subpage.html %}
         <section class="content">
             <!-- page 1 template -->
             <!-- display the 1st article in a big way-->
