moved repo fetch scripts to code page

--- a/code/index.html
+++ b/code/index.html
@@ -14,3 +14,4 @@ layout: default
 		
 	</section>
 </section>
+<script type="text/javascript" src="{{ site.url }}{{ site.baseurl }}/assets/js/get-gh-repos.js"></script>
