--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@ layout:
 
     <body aria-label="Content">
         {% include header-subpage.html %}
-        <section class="content">
+        <section class="content page">
             <!-- sub page template -->
             <header class="page__header">
                 <h1 class="page__title">Recent Articles</h1>
-            </header><!-- this is the rest of the posts listed with no feature images-->
+            </header>
+            <!-- this is the rest of the posts listed with no feature images-->
             <section class="article-listing__remaining article-listing__remaining--sub-page">
                 <section class="asides">
                    {% include featured-topics.html showMoreLink=true%}
