moved gh-repo script back to index page

--- a/code/index.html
+++ b/code/index.html
@@ -10,7 +10,5 @@ layout: sub-page
 	<div id="fallback" class="hidden">
 	  <a class="btn" href="https://github.com/gilt">View Gilt's Repositories</a>
 	</div>
-	<section id="all-repos" class="repos-container">
-		
-	</section>
+	<section id="all-repos" class="repos-container"></section>
 </section>
