--- a/work-here/index.html
+++ b/work-here/index.html
@@ -1,1 +1,79 @@
-https://docs.google.com/forms/d/e/1FAIpQLSc-CdSd-UN-M8jTE5OFzLa0CJJWHs6tXN9DWSevhDDFGxNxVg/viewform?usp=sf_link
+---
+layout: sub-page
+title: "HBC Tech - Work Here"
+application-link: https://docs.google.com/forms/d/e/1FAIpQLSc-CdSd-UN-M8jTE5OFzLa0CJJWHs6tXN9DWSevhDDFGxNxVg/viewform?usp=sf_link
+---
+<section class="careers-page">
+	<header class="careers-page__header">
+		<h1 class="careers-page__title">Careers</h1>
+		<img class="careers-page__hero-image" title="Careers" src="{{ site.url }}{{ site.baseurl }}/assets/images/{{ site.data.images.careers.hero }}" />
+	</header>
+	<section class="careers-page__jobs">
+		<h2 class="careers-page__jobs__title">Featured Positions</h2>
+		<section class="careers-page__jobs__position">
+			<h3 class="job-title">Senior Systems  Engineer</h3>
+			<p class="location location--label">Location: <span class="location--name">New York City</span></p>
+			<button>View Listing</button>
+		</section>
+		<section class="careers-page__jobs__position">
+			<h3 class="job-title">Senior Systems  Engineer</h3>
+			<p class="location location--label">Location: <span class="location--name">New York City</span></p>
+			<button>View Listing</button>
+		</section>
+		<section class="careers-page__jobs__position">
+			<h3 class="job-title">Senior Systems  Engineer</h3>
+			<p class="location location--label">Location: <span class="location--name">New York City</span></p>
+			<button>View Listing</button>
+		</section>
+		<section class="careers-page__jobs__position">
+			<h3 class="job-title">Senior Systems  Engineer</h3>
+			<p class="location location--label">Location: <span class="location--name">New York City</span></p>
+			<button>View Listing</button>
+		</section>
+		<section class="careers-page__jobs__view-all">
+			<button class="view-all-button">View All</button>
+			<p class="application-link">Can’t Find a Position? We Want to Hear from You. <a href="{page.application-link}" targer="_blank">Send an Application</a></p>
+		</section>
+	</section>
+	<section class="careers-page__perks">
+		<h2 class="careers-page__perks__title">Perks & Benefits</h2>
+		<section class="perk">
+			<img src="http://placehold.it/100x100"/>
+			<h3>Domestic Partner Benefits</h3>
+		</section>
+		<section class="perk">
+			<img src="http://placehold.it/100x100"/>
+			<h3>Domestic Partner Benefits</h3>
+		</section>
+		<section class="perk">
+			<img src="http://placehold.it/100x100"/>
+			<h3>Domestic Partner Benefits</h3>
+		</section>
+		<section class="perk">
+			<img src="http://placehold.it/100x100"/>
+			<h3>Domestic Partner Benefits</h3>
+		</section>
+		<section class="perk">
+			<img src="http://placehold.it/100x100"/>
+			<h3>Domestic Partner Benefits</h3>
+		</section>
+		<section class="perk">
+			<img src="http://placehold.it/100x100"/>
+			<h3>Domestic Partner Benefits</h3>
+		</section>
+	</section>
+	<section class="careers-page__tech-stack">
+		<h2 class="careers-page__tech-stack careers-page__tech-stack__title">Our Tech Stack</h2>
+		<span class="tech-lang">Scala</span>
+		<span class="tech-lang">react</span>
+		<span class="tech-lang">go</span>
+		<span class="tech-lang">docker</span>
+		<span class="tech-lang">aws</span>
+		<span class="tech-lang">vue</span>
+		<span class="tech-lang">graph ql</span>
+		<span class="tech-lang">microservice architecture</span>
+		<span class="tech-lang">Express</span>
+		<span class="tech-lang">es6</span>
+		<span class="tech-lang">Play</span>
+	</section>
+</section>
