further updates to career page styles

--- a/work-here/index.html
+++ b/work-here/index.html
@@ -12,58 +12,63 @@ application-link: https://docs.google.com/forms/d/e/1FAIpQLSc-CdSd-UN-M8jTE5OFzL
 		<h2 class="careers-page__jobs__title">Featured Positions</h2>
 		<section class="careers-page__jobs__position">
 			<h3 class="job-title">Senior Systems  Engineer</h3>
-			<p class="location location--label">Location: <span class="location--name">New York City</span></p>
-			<button>View Listing</button>
+			<p class="location">New York City</p>
+			<a class="view-listing" href="https://stackoverflow.com/jobs/112172/senior-systems-engineer-hbc" target="_blank">View Listing</a>
 		</section>
 		<section class="careers-page__jobs__position">
-			<h3 class="job-title">Senior Systems  Engineer</h3>
-			<p class="location location--label">Location: <span class="location--name">New York City</span></p>
-			<button>View Listing</button>
+			<h3 class="job-title">Senior Software Engineer</h3>
+			<p class="location">New York City</p>
+			<a class="view-listing" href="https://stackoverflow.com/jobs/132568/senior-software-engineer-hbc-digital-saks-fifth" target="_blank">View Listing</a>
 		</section>
 		<section class="careers-page__jobs__position">
-			<h3 class="job-title">Senior Systems  Engineer</h3>
-			<p class="location location--label">Location: <span class="location--name">New York City</span></p>
-			<button>View Listing</button>
+			<h3 class="job-title">Software Engineer</h3>
+			<p class="location">New York City</p>
+			<a class="view-listing" href="https://stackoverflow.com/jobs/149622/software-engineer-hbc-digital-saks-fifth" target="_blank">View Listing</a>
 		</section>
 		<section class="careers-page__jobs__position">
-			<h3 class="job-title">Senior Systems  Engineer</h3>
-			<p class="location location--label">Location: <span class="location--name">New York City</span></p>
-			<button>View Listing</button>
+			<h3 class="job-title">Senior Front End Engineer</h3>
+			<p class="location">New York City</p>
+			<a class="view-listing" href="https://stackoverflow.com/jobs/137315/senior-front-end-engineer-hbc-digital-saks-fifth" target="_blank">View Listing</a>
+		</section>
+		<section class="careers-page__jobs__position">
+			<h3 class="job-title">Front End Engineer</h3>
+			<p class="location">New York City</p>
+			<a class="view-listing" href="https://stackoverflow.com/jobs/149623/front-end-engineer-hbc-digital-saks-fifth" target="_blank">View Listing</a>
 		</section>
 		<section class="careers-page__jobs__view-all">
-			<button class="view-all-button">View All</button>
-			<p class="application-link">Can’t Find a Position? We Want to Hear from You. <a href="{page.application-link}" targer="_blank">Send an Application</a></p>
+			<a class="view-all-link" href="https://stackoverflow.com/jobs/companies/hbc-digital" target="_blank">Visit Us On Stack Overflow</a>
+			<p class="view-all-copy">Can’t find a position? We're always looking for good talent!' <a class="application-link" href="{page.application-link}" target="_blank">Get In Touch!</a></p>
 		</section>
 	</section>
 	<section class="careers-page__perks">
 		<h2 class="careers-page__perks__title">Perks & Benefits</h2>
 		<section class="perk">
-			<img src="http://placehold.it/100x100"/>
-			<h3>Domestic Partner Benefits</h3>
+			<img class="perk__icon"src="http://placehold.it/100x100"/>
+			<h3 class="perk__label">Domestic Partner Benefits</h3>
 		</section>
 		<section class="perk">
-			<img src="http://placehold.it/100x100"/>
-			<h3>Domestic Partner Benefits</h3>
+			<img class="perk__icon"src="http://placehold.it/100x100"/>
+			<h3 class="perk__label">Unlimited Paid Vacation</h3>
 		</section>
 		<section class="perk">
-			<img src="http://placehold.it/100x100"/>
-			<h3>Domestic Partner Benefits</h3>
+			<img class="perk__icon"src="http://placehold.it/100x100"/>
+			<h3 class="perk__label">Flexible Office Hours</h3>
 		</section>
 		<section class="perk">
-			<img src="http://placehold.it/100x100"/>
-			<h3>Domestic Partner Benefits</h3>
+			<img class="perk__icon"src="http://placehold.it/100x100"/>
+			<h3 class="perk__label">Casual Dress Code</h3>
 		</section>
 		<section class="perk">
-			<img src="http://placehold.it/100x100"/>
-			<h3>Domestic Partner Benefits</h3>
+			<img class="perk__icon"src="http://placehold.it/100x100"/>
+			<h3 class="perk__label">Discounts At Our Stores</h3>
 		</section>
 		<section class="perk">
-			<img src="http://placehold.it/100x100"/>
-			<h3>Domestic Partner Benefits</h3>
+			<img class="perk__icon"src="http://placehold.it/100x100"/>
+			<h3 class="perk__label">401k Matching</h3>
 		</section>
 	</section>
 	<section class="careers-page__tech-stack">
-		<h2 class="careers-page__tech-stack careers-page__tech-stack__title">Our Tech Stack</h2>
+		<h2 class="careers-page__tech-stack__title">Our Tech Stack</h2>
 		<span class="tech-lang">Scala</span>
 		<span class="tech-lang">react</span>
 		<span class="tech-lang">go</span>
