adding animations to careers page

--- a/work-here/index.html
+++ b/work-here/index.html
@@ -4,11 +4,11 @@ title: "HBC Tech - Work Here"
 application-link: https://docs.google.com/forms/d/e/1FAIpQLSc-CdSd-UN-M8jTE5OFzLa0CJJWHs6tXN9DWSevhDDFGxNxVg/viewform?usp=sf_link
 ---
 <section class="careers-page">
-	<header class="careers-page__header">
+	<header class="careers-page__header careers-page__header--reveal">
 		<h1 class="careers-page__title">Careers</h1>
 		<img class="careers-page__hero-image" title="Careers" src="{{ site.url }}{{ site.baseurl }}/assets/images/{{ site.data.images.careers.hero }}" />
 	</header>
-	<section class="careers-page__jobs">
+	<section class="careers-page__jobs careers-page__jobs--reveal">
 		<h2 class="careers-page__jobs__title">Featured Positions</h2>
 		<section class="careers-page__jobs__position">
 			<h3 class="job-title">Senior Systems  Engineer</h3>
